--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,10 @@
 # * https://github.com/supermarin/xcpretty#usage
 
 language: objective-c
-cache: cocoapods
-podfile: Example/Podfile
 before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
+- export LANG=en_US.UTF-8
+- gem install cocoapods -v '0.34.4' # Since Travis is not always on latest version
 - pod install --project-directory=Example
-install:
-- gem install xcpretty --no-rdoc --no-ri --no-document --quiet
 script:
-- set -o pipefail && xcodebuild test -workspace Example/ODKit.xcworkspace -scheme ODKit-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty -c
+- xctool test -workspace Example/ODKit.xcworkspace -scheme ODKit-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
 - pod lib lint --quick
