--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,11 @@
 language: objective-c
 before_install:
 - export LANG=en_US.UTF-8
-- gem install cocoapods -v '0.34.4' # Since Travis is not always on latest version
+- gem install cocoapods -v '0.35.0' # Since Travis is not always on latest version
 - pod install --project-directory=Example
 script:
 - xctool test -workspace Example/ODKit.xcworkspace -scheme ODKit-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
 - pod lib lint --quick
+notifications:
+  slack: oursky:PxqsclRADehuWEs51vpgxeUh
+
