--- a/Example/ODKit.xcodeproj/xcshareddata/xcschemes/ODKit-Example.xcscheme
+++ b/Example/ODKit.xcodeproj/xcshareddata/xcschemes/ODKit-Example.xcscheme
@@ -37,6 +37,11 @@
                BlueprintName = "Tests"
                ReferencedContainer = "container:ODKit.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "BooSpec">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
       <MacroExpansion>
