--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ language: objective-c
 before_install:
 - export LANG=en_US.UTF-8
 - gem install cocoapods -v '0.35.0' # Since Travis is not always on latest version
+- sudo pip install lizard
 - pod install --project-directory=Example
 script:
 - xctool test -workspace Example/ODKit.xcworkspace -scheme ODKit-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
 - pod lib lint --quick
+- lizard Pod/ -C 15 -w -i 0
 notifications:
   slack: oursky:PxqsclRADehuWEs51vpgxeUh
 
