Fix linker error for iOS platform version

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,5 +1,7 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
+platform :ios, '7.1'
+
 target 'SkyKit', :exclusive => true do
   pod "SkyKit", :path => "../"
 end
