Correct the schema name at travis build
refs #221

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 - brew install clang-format
 - pod install --project-directory=Example
 script:
-- xctool test -workspace Example/SkyKit.xcworkspace -scheme SkyKit-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+- xctool test -workspace Example/SkyKit.xcworkspace -scheme SKYKit-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
 - pod lib lint --quick
 - ./clang-check.sh
 - lizard Pod/ -C 15 -w -i 0
