--- a/Example/SKYKit.xcodeproj/xcshareddata/xcschemes/SKYKit-Example.xcscheme
+++ b/Example/SKYKit.xcodeproj/xcshareddata/xcschemes/SKYKit-Example.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0600"
+   LastUpgradeVersion = "0710"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "6003F589195388D20070C39A"
                BuildableName = "SKYKit.app"
                BlueprintName = "SKYKit"
-               ReferencedContainer = "container:SKYKit.xcodeproj">
+               ReferencedContainer = "container:SkyKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -35,7 +35,7 @@
                BlueprintIdentifier = "6003F5AD195388D20070C39A"
                BuildableName = "Tests.xctest"
                BlueprintName = "Tests"
-               ReferencedContainer = "container:SKYKit.xcodeproj">
+               ReferencedContainer = "container:SkyKit.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -45,7 +45,7 @@
             BlueprintIdentifier = "6003F589195388D20070C39A"
             BuildableName = "SKYKit.app"
             BlueprintName = "SKYKit"
-            ReferencedContainer = "container:SKYKit.xcodeproj">
+            ReferencedContainer = "container:SkyKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -68,7 +68,7 @@
             BlueprintIdentifier = "6003F589195388D20070C39A"
             BuildableName = "SKYKit.app"
             BlueprintName = "SKYKit"
-            ReferencedContainer = "container:SKYKit.xcodeproj">
+            ReferencedContainer = "container:SkyKit.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -87,7 +87,7 @@
             BlueprintIdentifier = "6003F589195388D20070C39A"
             BuildableName = "SKYKit.app"
             BlueprintName = "SKYKit"
-            ReferencedContainer = "container:SKYKit.xcodeproj">
+            ReferencedContainer = "container:SkyKit.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
