--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@
 # * https://github.com/supermarin/xcpretty#usage
 
 language: objective-c
+os: osx
+osx_image: xcode7.2
 before_install:
 - export LANG=en_US.UTF-8
 - gem install cocoapods -v '~>0.39.0' # Since Travis is not always on latest version
