--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,10 @@ osx_image: xcode7.2
 before_install:
 - export LANG=en_US.UTF-8
 - gem install cocoapods -v '~>0.39.0' # Since Travis is not always on latest version
-- sudo pip install lizard
 - brew update
 - brew install clang-format
+- brew install python
+- sudo pip install lizard
 - pod install --project-directory=Example
 script:
 - xctool test -workspace Example/SkyKit.xcworkspace -scheme SKYKit-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
