--- a/Example/Podfile
+++ b/Example/Podfile
@@ -7,6 +7,11 @@ target 'SKYKit' do
   pod "SKYKit/Facebook", :path => "../"
 end
 
+target 'Test Runner' do
+  pod "SKYKit", :path => "../"
+  pod "SKYKit/Facebook", :path => "../"
+end
+
 target 'Tests' do
   pod "SKYKit", :path => "../"
   pod "SKYKit/Facebook", :path => "../"
