Add Swift Example for SKYKit
refs skygeario/skygear-SDK-iOS#9

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -12,6 +12,13 @@ target 'Test Runner' do
   pod "SKYKit/Facebook", :path => "../"
 end
 
+target 'Swift Example' do
+  use_frameworks!
+
+  pod "SKYKit", :path => "../"
+  pod "SKYKit/Facebook", :path => "../"
+end
+
 target 'Tests' do
   pod "SKYKit", :path => "../"
   pod "SKYKit/Facebook", :path => "../"
