Pod install Chat

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,6 +5,7 @@ platform :ios, '7.1'
 target 'Test Runner' do
   pod "SKYKit", :path => "../"
   pod "SKYKit/Facebook", :path => "../"
+  pod "SKYKit/Chat", :path => "../"
 end
 
 target 'Swift Example' do
@@ -12,11 +13,13 @@ target 'Swift Example' do
 
   pod "SKYKit", :path => "../"
   pod "SKYKit/Facebook", :path => "../"
+  pod "SKYKit/Chat", :path => "../"
 end
 
 target 'Tests' do
   pod "SKYKit", :path => "../"
   pod "SKYKit/Facebook", :path => "../"
+  pod "SKYKit/Chat", :path => "../"
 
   pod 'Specta'
   pod 'Expecta'
