Enforce discarded_notification_center_observer lint check

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -10,3 +10,4 @@ colon: error
 weak_delegate: error
 class_delegate_protocol: error
 syntactic_sugar: error
+discarded_notification_center_observer: error
