Support iOS9 web oauth flow

--- a/Example/Swift Example/Info.plist
+++ b/Example/Swift Example/Info.plist
@@ -62,5 +62,16 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>skygearexample</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>skygearexample</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
