--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,9 @@ before_install:
 - pod update --project-directory=Example
 - pod install --project-directory=Example
 script:
-- xcodebuild -scheme "$SCHEME" -workspace "$WORKSPACE" -sdk "$SDK" -destination "$DESTINATION" build test | xcpretty
+- xcodebuild -scheme "Test Runner" -workspace "$WORKSPACE" -sdk "$SDK" -destination "$DESTINATION" build test | xcpretty
+- xcodebuild -scheme "Swift Example" -workspace "$WORKSPACE" -sdk "$SDK" -destination "$DESTINATION" build | xcpretty
+- xcodebuild -scheme "Mac Example" -workspace "$WORKSPACE" build | xcpretty
 - pod lib lint --allow-warnings
 - ./clang-check.sh
 - swiftlint
@@ -40,8 +42,7 @@ env:
   global:
     - LC_CTYPE=en_US.UTF-8
     - LANG=en_US.UTF-8
-    - WORKSPACE=Example/SkyKit.xcworkspace
-    - SCHEME="Test Runner"
+    - WORKSPACE=Example/SKYKit.xcworkspace
     - DESTINATION="OS=10.0,name=iPhone 6S"
     - SDK=iphonesimulator
 notifications:
