--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ before_install:
 - brew upgrade --force-bottle https://raw.githubusercontent.com/Homebrew/homebrew-core/6dcd3c206681f02b267e4cf3d44ec9a8ded36b40/Formula/swiftlint.rb
 - clang-format --version
 - pip2 install lizard
-- pod update --project-directory=Example
-- pod install --project-directory=Example
+- pod install --repo-update --project-directory=Example
 script:
 - xcodebuild -scheme "Test Runner" -workspace "$WORKSPACE" -sdk "$SDK" -destination "$DESTINATION" build test | xcpretty
 - xcodebuild -scheme "Swift Example" -workspace "$WORKSPACE" -sdk "$SDK" -destination "$DESTINATION" build | xcpretty
