--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
 - sh -eo pipefail -c "xcodebuild -scheme \"Mac Example\" -workspace \"$WORKSPACE\" build | xcpretty"
 - pod lib lint --allow-warnings
 - ./clang-check.sh
-- swiftlint
+- swiftlint --strict
 - lizard Pod/ -C 15 -W .lizard -w -i 0
 before_deploy:
 - rvm install ruby-2.2.4 # jazzy doesn't work in old rubies
