--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,6 +2,7 @@ source 'https://github.com/CocoaPods/Specs.git'
 
 target 'Test Runner' do
   platform :ios, '8.0'
+  use_frameworks!
 
   pod "SKYKit", :path => "../"
   pod "SKYKit/Facebook", :path => "../"
@@ -17,6 +18,7 @@ end
 
 target 'Tests' do
   platform :ios, '8.0'
+  use_frameworks!
 
   pod "SKYKit", :path => "../"
   pod "SKYKit/Facebook", :path => "../"
@@ -29,6 +31,7 @@ end
 
 target 'Mac Example' do
   platform :osx, '10.9'
+  use_frameworks!
 
   pod "SKYKit/Core", :path => "../"
 end
